[package]
name = "csv-explorer-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "csv-explorer-ui"
path = "src/main.rs"

[dependencies]
dioxus.workspace = true
dioxus-web = { workspace = true, optional = true }
dioxus-desktop = { workspace = true, optional = true }
dioxus-router = "0.7"
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
csv-explorer-shared = { path = "../shared" }
gloo-timers = { version = "0.4.0", features = ["futures"] }
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }

# Server-only dependencies (only used when building the server binary)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest.workspace = true
clap.workspace = true
toml.workspace = true
thiserror = "1.0"
tokio = { workspace = true, features = ["full"] }
axum.workspace = true
rand = "0.8"

[features]
default = ["web"]
web = ["dioxus-web"]
desktop = ["dioxus-desktop"]
